Create User Permission Controller
